@@ -1,5 +1,7 @@
 About: A silly Discord bot made by Monsoonjr99 for his guilds and the Hypothetical Hurricanes Wiki Discord guild
 
+v20190804a:
+    + Added 'm;dmmepls' command
 v20190731a:
     + Added 'm;sm' command
 v20190730c:
